<?xml version="1.0"?>
<package format="3">
<name>moss_rock</name>
<version>0.0.0</version>
<description>ROS 2 wrapper for MORB SLAM</description>
<maintainer email="leocornelius019@gmail.com">Leah Cornelius</maintainer>
<license>GNU General Public License v3.0</license>

<buildtool_depend>ament_cmake</buildtool_depend>

<depend>rclcpp</depend>
<depend>std_msgs</depend>
<depend>sensor_msgs</depend>
<depend>geometry_msgs</depend>
<depend>tf2</depend>
<depend>tf2_ros</depend>
<depend>tf2_geometery_msgs</depend>
<depend>cv_bridge</depend>
<depend>image_transport</depend>
<depend>nav_msgs</depend>
<depend>visualization_msgs</depend>
<depend>foxglove_msgs</depend>

<export>
<build_type>ament_cmake</build_type>
</export>
</package>